Rollback to working cursor onclick, fixed centering on mobile

--- a/delegates/dom/src/assets/css/player.css
+++ b/delegates/dom/src/assets/css/player.css
@@ -174,7 +174,7 @@ canvas {
 	width: 100%;
 	height: 100%;
 	z-index: 30;
-	position: absolute;
+	position: relative;
 	color: black; /*var(--colour2);*/
 	pointer-events: none;
 	overflow: hidden;
